# SCOPE

./: .env.example  .gitignore  README.md  article_cache.py  config.py  cost_tracker.py  demo_app.py  evaluators.py  ideology_question_bank.json  known_media_types.csv  methodology.py  pyproject.toml  refactored_analyzers.py  requirements.txt  research.py  schemas.py  scraper.py  search_backends.py
.streamlit/: config.toml
results/: summary.json
results/cached/: fact_check_reattribution.json  loaded_language_sources.json
