[project]
name = "scope"
version = "0.1.0"
description = "SCOPE — a media source profiling demo (political bias, factual reliability, credibility)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "langchain-openai>=0.1.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=7.0.0",
    "python-whois>=0.9.0",
]
